# docquery-backend

./: pyproject.toml
.devcontainer/: devcontainer.json
