[tool.poetry]
name = "docquery-backend"
version = "0.1.0"
description = ""
authors = ["Md Abid Hussain"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
copilotkit = "^0.1.31"
langchain = "^0.3.14"
langgraph = "^0.2.61"
langchain-community = "^0.3.14"
fastapi = {extras = ["standard"], version = "^0.115.6"}

[tool.poetry.scripts]
server = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

